Fixed navbar not being sticky

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,9 +3,11 @@
 @tailwind utilities;
 
 /* Fix for react-vertical-timeline-component that caused shake on mobile */
-html,
-body {
-  overflow-x: hidden;
+@media (max-width: 767px) {
+  html,
+  body {
+    overflow-x: hidden;
+  }
 }
 
 /* Fix for react-vertical-timeline-component that caused date to overlap company image */
